# dataset-gfy

./: .editorconfig  .gitignore  NOTES.md  test.jsonl  verify.fish
experiments/1-qwen25coder/: NOTES.md  build.fish  gen-test.py  gfy.jsonl  main.py  pyproject.toml  test.py
experiments/uncensor/: cuda_env.py  pyproject.toml  qwen.py  refusal-gptoss.py  refusal_demo.py  trump.py  vanilla.py
experiments/uncensor/datasets/: trump.jsonl
experiments/uncensor/kata/: einops-exercises.py  exercise.py  helpers.py  norm.py  pi.py  tensors.py
experiments/uncensor_gptoss/: pyproject.toml  todo-gptoss-tl.py
semantic_grep_auto_context/fims/2026-01-11_001/: README.md
semantic_grep_auto_context/fims/2026-01-11_002/: README.md
semantic_grep_auto_context/fims/2026-02-09_001/: README.md
semantic_grep_auto_context/rag006/: output-raw.harmony
semantic_grep_auto_context/rag013/: logs
semantic_grep_auto_context/rewrite/2026-01-04_003/: README.md
semantic_grep_auto_context/rewrite/2026-01-04_004/medium/attempt1/: input-body.json
semantic_grep_auto_context/rewrite/2026-01-04_004/medium/attempt2/: input-body.json
semantic_grep_auto_context/rewrite/2026-01-08_001/: README.md
semantic_grep_auto_context/rewrite/2026-01-25_002/: README.md
semantic_grep_auto_context/rewrite/2026-01-25_003/: README.md
semantic_grep_auto_context/rewrite/2026-01-28_002/: README.md
semantic_grep_auto_context/rewrite/2026-01-29_003/: README.md
semantic_grep_auto_context/rewrite/2026-02-13_001/: README.md
semantic_grep_auto_context/tools/2026-01-06_001/: 1767755334-thread.json  README.md
semantic_grep_auto_context/tools/2026-01-06_part2/: README.md
semantic_grep_auto_context/tools/2026-01-09_001/1767972520/: README.md
semantic_grep_auto_context/tools/2026-01-12_003/: README.md
semantic_grep_auto_context/tools/2026-01-12_004/: 1768214478-thread.json  README.md
semantic_grep_auto_context/tools/2026-01-15_001/: README.md
semantic_grep_auto_context/tools/2026-01-29_005/: README.md
semantic_grep_auto_context/tools/2026-02-03_002/: README.md
