[project]
name = "1-qwen25coder"
version = "0.1.0"
requires-python = ">=3.11,<=3.12"
dependencies = [
    "colorama>=0.4.6",
    "einops>=0.8.1",
    "ipykernel>=7.0.1",
    "jaxtyping>=0.3.3",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "scikit-learn>=1.7.2",
    "tiktoken>=0.12.0",
    # uv add transformers==4.44.2 transformers_stream_generator tiktoken transformer_lens einops jaxtyping colorama
    "transformer-lens>=2.15.4",
    "transformers==4.44.2",
    "transformers-stream-generator>=0.0.5",
]


[optional-dependencies]
cuda = [
    "flash-attn>=2.8.3",
]
