[project]
name = "1-qwen25coder"
version = "0.1.0"
requires-python = ">=3.11,<=3.12"
dependencies = [
    "colorama>=0.4.6",
    "einops>=0.8.1",
    "ipykernel>=7.0.1",
    "jaxtyping>=0.3.3",
    "kernels>=0.11.3",
    "scikit-learn>=1.7.2",
    "tiktoken>=0.12.0",
    "transformer-lens>=2.15.4",
    # uv add transformers==4.44.2 transformers_stream_generator tiktoken transformer_lens einops jaxtyping colorama
    "transformers>=4.57.3",
    "transformers-stream-generator>=0.0.5",
    "yapf>=0.43.0",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch==2.8.0"] # flash-attn 2.8.3 works with torch 2.8.0 (max)

[project.optional-dependencies]
cuda = [
    "flash-attn>=2.8.3",
]
